[package]
description = "suisei-music companion"
edition = "2018"
homepage = "https://github.com/suisei-cn/suimu"
license = "MIT"
name = "suimu"
repository = "https://github.com/suisei-cn/suimu.git"
version = "0.1.0"

[dependencies]
csv = "1.1.6"
log = "0.4.14"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.126", features = ["derive"] }
structopt = "0.3.21"

[[bin]]
name = "suimu-check"
path = "src/bin/suimu-check.rs"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"]