[package]
description = "suisei-music companion"
edition = "2021"
homepage = "https://github.com/suisei-cn/suimu"
license = "MIT"
name = "suimu"
repository = "https://github.com/suisei-cn/suimu.git"
version = "0.4.3"
[dependencies]
anyhow = "1.0.41"
chrono = "0.4.19"
csv = "1.1.6"
lazy_static = "1.4.0"
levenshtein = "1.0.5"
log = "0.4.14"
pretty_env_logger = "0.4.0"
regex = "1.5.4"
requestty = "0.1.1"
serde_json = "1.0.64"
structopt = "0.3.21"
strum = "0.21.0"
strum_macros = "0.21.1"
twox-hash = "1.6.0"
unicode-normalization = "0.1"

[dependencies.serde]
features = ["derive"]
version = "1.0.126"

[dev-dependencies]
cargo-audit = "0.16.0"

[dev-dependencies.cargo-husky]
default-features = false
features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"]
version = "1"
